@@ -10,6 +10,7 @@ AV2 Changelog :: version a4.1
 * Water arc "Boomerang" works when killed a mob
 * Airblade "Chainsaw" upgrade destroys harder blocks (up to hardness 2 vs 0.5)
 * Airblade "Chainsaw" can destroy multiple blocks
+* Special error message when trying to bind whistle to untamed bison
 
 > Fix misspeilling of talhanation in mcmod.info (mods screen)
 > Fix glowing mobs w/ fireball bug
